tests/baselines/reference/returnTypeTypeArguments.errors.txt
tests/cases/compiler/returnTypeTypeArguments.ts(14,16): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(15,16): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(15,16): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(16,16): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(16,16): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(16,16): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(18,16): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(19,16): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(19,16): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(20,16): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(23,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(24,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(24,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(25,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(25,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(25,11): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(27,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(28,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(28,11): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(29,11): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(33,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(34,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(34,11): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(36,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(37,11): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(37,11): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(38,11): error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(52,15): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(53,26): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(54,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(55,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(56,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(57,15): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(58,26): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(59,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(60,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(61,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(65,15): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(66,26): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(67,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(68,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(69,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(70,15): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(71,26): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(72,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(73,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/returnTypeTypeArguments.ts(74,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/returnTypeTypeArguments.ts (47 errors) ====
    class One<T>{
        value: T;
    }
    class Two<T, U>{
        value: T;
        id: U;
    }
    class Three<T, U, V>{
        value: T;
        id: U;
        name: V;
    }
    
    function A1(): One { return null; }
                   ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    function A2(): Two { return null; }
                   ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
                   ~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
    function A3(): Three { return null; }
                   ~~~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
                   ~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
                   ~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    
    function B1(): Two<number> { return null; }
                   ~~~~~~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
    function B2(): Three<string> { return null; }
                   ~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
                   ~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    function B3(): Three<string, number> { return null; }
                   ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    
    class C {
        A1(): One { return null; }
              ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        A2(): Two { return null; }
              ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
              ~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
        A3(): Three { return null; }
              ~~~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
              ~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
              ~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    
        B1(): Two<number> { return null; }
              ~~~~~~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
        B2(): Three<string> { return null; }
              ~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
              ~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
        B3(): Three<string, number> { return null; }
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    }
    
    class D<T> {
        A2(): Two<T> { return null; }
              ~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
        A3(): Three<T> { return null; }
              ~~~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
              ~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    
        B1(): Two<T> { return null; }
              ~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
        B2(): Three<T> { return null; }
              ~~~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
              ~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
        B3(): Three<string, T> { return null; }
              ~~~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'V' implicitly has type 'any' because it was not supplied.
    }
    
    interface I<T> {
        value: T;
    }
    
    class Y<T>
    {
        value: T;
    }
    
    class X<T>
    {
        p1: () => X;
                  ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p2: { [idx: number]: X }
                             ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p3: X[]
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p4: I<X>
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p5: X
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p6: () => Y;
                  ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p7: { [idx: number]: Y }
                             ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p8: Y[]
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p9: I<Y>
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        pa: Y
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    }
    
    declare var a: {
        p1: () => X;
                  ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p2: { [idx: number]: X }
                             ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p3: X[]
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p4: I<X>
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p5: X
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p6: () => Y;
                  ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p7: { [idx: number]: Y }
                             ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p8: Y[]
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        p9: I<Y>
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        pa: Y
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    };
    